changed function name and modified merging

--- a/scripts/buddy/buddy.ipynb
+++ b/scripts/buddy/buddy.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 650,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,11 +47,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 643,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def free_memory(n, mem):\n",
+    "def getFree(n, mem):\n",
     "    '''\n",
     "    returns the size of free spaces and its offset addresses\n",
     "    Inputs:\n",
@@ -80,26 +80,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 644,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 644,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.where(np.array([3,4,5])==3)[0][0]"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -108,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 645,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +101,7 @@
     "    Output:\n",
     "        mem: int list, memory array\n",
     "    '''\n",
-    "    frees, offsets = free_memory(0, mem)\n",
+    "    frees, offsets = getFree(0, mem)\n",
     "\n",
     "    while not divide in frees:\n",
     "        frees_sorted = np.sort(frees)\n",
@@ -134,7 +114,7 @@
     "        true_offset = offset - np.sum(mem[:offset] == 2) # exclude 2\n",
     "        print(\"(splitting %d/%d)\" % (true_offset, divide_num))\n",
     "        \n",
-    "        frees, offsets = free_memory(0, mem)\n",
+    "        frees, offsets = getFree(0, mem)\n",
     "    return mem\n"
    ]
   },
@@ -147,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 646,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 647,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,11 +177,11 @@
     "    '''\n",
     "    \n",
     "    alloc_len = np.power(2, math.ceil(np.log2(n)))\n",
-    "    frees, offsets = free_memory(0, mem)\n",
+    "    frees, offsets = getFree(0, mem)\n",
     "    \n",
     "    if not (alloc_len == frees).any():\n",
     "        mem = split(alloc_len, mem)\n",
-    "        frees, offsets = free_memory(0, mem)\n",
+    "        frees, offsets = getFree(0, mem)\n",
     "\n",
     "    ind = offsets[frees.index(alloc_len)]\n",
     "    mem[ind:ind+n] = 1\n",
@@ -223,21 +203,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 648,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "def free(offset, mem):\n",
     "    '''\n",
     "    frees up memory chunks that starts from offs, merges if necessary\n",
-    "    Inputs:\n",
+    "    Inputs:getFree\n",
     "        offset: int, offset address of memory chunks to free up\n",
     "        mem: int list, memory array\n",
     "    Output:\n",
     "        mem: int list, memory array\n",
     "    '''\n",
     "\n",
-    "    frees, offsets = free_memory(0, mem)\n",
+    "    frees, offsets = getFree(0, mem)\n",
     "\n",
     "    # exclude 2, include number of 2's before true_offset\n",
     "    true_offset = offset + \\\n",
@@ -252,13 +232,15 @@
     "    print(\"Blocks %d-%d freed:\" % (offset, i - true_offset + offset - 1))\n",
     "\n",
     "    while True:\n",
-    "        frees, offsets = free_memory(0, mem)\n",
+    "        frees, offsets = getFree(0, mem)\n",
     "        prev_free = 0\n",
     "\n",
     "        for i in range(1, len(frees)):\n",
     "            if frees[i-1] == frees[i] and offsets[i]-offsets[i-1]-frees[i]==1:\n",
     "                mem = np.delete(mem, offsets[i]-1) \n",
-    "                print(\"(merging %d/%d and %d/%d)\" % (offsets[i-1], frees[i-1], offsets[i]-1, frees[i]))\n",
+    "                true_offset_1 = offsets[i-1] -np.sum(mem[:offsets[i-1]] == 2) \n",
+    "                true_offset_2 = offsets[i] -np.sum(mem[:offsets[i]] == 2) - 1 \n",
+    "                print(\"(merging %d/%d and %d/%d)\" % (true_offset_1, frees[i-1], true_offset_2, frees[i]))\n",
     "                break\n",
     "            prev_free = free\n",
     "        else:\n",
@@ -278,14 +260,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 649,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "How many blocks do you wanto allocate/free?:  a 4\n"
+      "How many blocks do you wanto allocate/free?:  a 5\n"
      ]
     },
     {
@@ -295,24 +277,98 @@
       "(splitting 0/64)\n",
       "(splitting 0/32)\n",
       "(splitting 0/16)\n",
-      "(splitting 0/8)\n",
-      "Blocks 0-3 allocated:\n",
-      "|####|----|--------|----------------|--------------------------------|\n"
+      "Blocks 0-4 allocated:\n",
+      "|#####---|--------|----------------|--------------------------------|\n"
      ]
     },
     {
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "How many blocks do you wanto allocate/free?:  a 16\n"
+      "How many blocks do you wanto allocate/free?:  a 7\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Blocks 16-31 allocated:\n",
-      "|####|----|--------|################|--------------------------------|\n"
+      "Blocks 8-14 allocated:\n",
+      "|#####---|#######-|----------------|--------------------------------|\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "How many blocks do you wanto allocate/free?:  a 32\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Blocks 32-63 allocated:\n",
+      "|#####---|#######-|----------------|################################|\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "How many blocks do you wanto allocate/free?:  a 11\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Blocks 16-26 allocated:\n",
+      "|#####---|#######-|###########-----|################################|\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "How many blocks do you wanto allocate/free?:  f 8\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Blocks 8-15 freed:\n",
+      "|#####---|--------|###########-----|################################|\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "How many blocks do you wanto allocate/free?:  f 16\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Blocks 16-31 freed:\n",
+      "|#####---|--------|----------------|################################|\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "How many blocks do you wanto allocate/free?:  f 32\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Blocks 32-62 freed:\n",
+      "|#####---|--------|----------------|--------------------------------|\n"
      ]
     },
     {
@@ -334,17 +390,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Blocks 0-3 freed:\n",
-      "(merging 0/4 and 4/4)\n",
+      "Blocks 0-7 freed:\n",
       "(merging 0/8 and 8/8)\n",
-      "|----------------|################|--------------------------------|\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "How many blocks do you wanto allocate/free?:  q\n"
+      "(merging 0/16 and 16/16)\n",
+      "(merging 0/32 and 32/32)\n",
+      "|----------------------------------------------------------------|\n"
      ]
     }
    ],
@@ -362,14 +412,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 651,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "How many blocks do you wanto allocate/free?:  a 4\n"
+      "How many blocks do you wanto allocate/free?:  a 32\n"
      ]
     },
     {
@@ -377,26 +427,8 @@
      "output_type": "stream",
      "text": [
       "(splitting 0/64)\n",
-      "(splitting 0/32)\n",
-      "(splitting 0/16)\n",
-      "(splitting 0/8)\n",
-      "Blocks 0-3 allocated:\n",
-      "|####|----|--------|----------------|--------------------------------|\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "How many blocks do you wanto allocate/free?:  a 8\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Blocks 8-15 allocated:\n",
-      "|####|----|########|----------------|--------------------------------|\n"
+      "Blocks 0-31 allocated:\n",
+      "|################################|--------------------------------|\n"
      ]
     },
     {
@@ -410,93 +442,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Blocks 16-31 allocated:\n",
-      "|####|----|########|################|--------------------------------|\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "How many blocks do you wanto allocate/free?:  f 0\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/mnt/c/Users/shusa/.pyenv/versions/anaconda3-5.3.1/lib/python3.7/site-packages/ipykernel_launcher.py:7: DeprecationWarning: elementwise comparison failed; this will raise an error in the future.\n",
-      "  import sys\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Blocks 0-3 freed:\n",
-      "(merging 0/4 and 4/4)\n",
-      "|--------|########|################|--------------------------------|\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "How many blocks do you wanto allocate/free?:  a 11\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
       "(splitting 32/32)\n",
-      "Blocks 32-42 allocated:\n",
-      "|----|----|########|################|###########-----|----------------|\n"
+      "Blocks 32-47 allocated:\n",
+      "|################################|################|----------------|\n"
      ]
     },
     {
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "How many blocks do you wanto allocate/free?:  a 4\n"
+      "How many blocks do you wanto allocate/free?:  a 16\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Blocks 0-3 allocated:\n",
-      "|####|----|########|################|###########-----|----------------|\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "How many blocks do you wanto allocate/free?:  f 8\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Blocks 8-15 freed:\n",
-      "|####|----|--------|################|###########-----|----------------|\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "How many blocks do you wanto allocate/free?:  a 11\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Blocks 48-58 allocated:\n",
-      "|####|----|--------|################|###########-----|###########-----|\n"
+      "Blocks 48-63 allocated:\n",
+      "|################################|################|################|\n"
      ]
     },
     {
@@ -510,27 +473,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Blocks 0-3 freed:\n",
-      "(merging 0/4 and 4/4)\n",
-      "(merging 0/8 and 8/8)\n",
-      "|----------------|################|###########-----|###########-----|\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "How many blocks do you wanto allocate/free?:  f 32\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Blocks 32-47 freed:\n",
-      "(merging 0/4 and 4/4)\n",
-      "(merging 0/8 and 8/8)\n",
-      "|----------------|################|----------------|###########-----|\n"
+      "Blocks 0-31 freed:\n",
+      "|--------------------------------|################|################|\n"
      ]
     },
     {
@@ -545,28 +489,30 @@
      "output_type": "stream",
      "text": [
       "Blocks 48-62 freed:\n",
-      "(merging 0/4 and 4/4)\n",
-      "(merging 0/8 and 8/8)\n",
-      "(merging 34/16 and 50/16)\n",
-      "|----------------|################|--------------------------------|\n"
+      "|--------------------------------|################|----------------|\n"
      ]
     },
     {
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "How many blocks do you wanto allocate/free?:  f 16\n"
+      "How many blocks do you wanto allocate/free?:  f 32\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/mnt/c/Users/shusa/.pyenv/versions/anaconda3-5.3.1/lib/python3.7/site-packages/ipykernel_launcher.py:7: DeprecationWarning: elementwise comparison failed; this will raise an error in the future.\n",
+      "  import sys\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Blocks 16-31 freed:\n",
-      "(merging 0/4 and 4/4)\n",
-      "(merging 0/8 and 8/8)\n",
-      "(merging 0/16 and 16/16)\n",
-      "(merging 33/16 and 49/16)\n",
+      "Blocks 32-47 freed:\n",
+      "(merging 32/16 and 48/16)\n",
       "(merging 0/32 and 32/32)\n",
       "|----------------------------------------------------------------|\n"
      ]
@@ -590,6 +536,13 @@
     "    elif key[0] == 'q':\n",
     "        break"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
