--- a/scripts/buddy/buddy.ipynb
+++ b/scripts/buddy/buddy.ipynb
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -395,6 +395,13 @@
       "(merging 0/16 and 16/16)\n",
       "(merging 0/32 and 32/32)\n",
       "|----------------------------------------------------------------|\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "How many blocks do you wanto allocate/free?:  q\n"
      ]
     }
    ],
